<resources>
    <string name="app_name">NewAndroidBank</string>
    <string name="login_text">Login</string>
    <string name="password_prompt">Enter Password</string>
    <string name="login_prompt">Enter ID</string>
    <string name="status_default">Status: n/a</string>

    <string name="database_initialization">Database Initialized!</string>
    <string name="connection_failed">Connection failed</string>
    <string name="user_not_found">User not found</string>

    <string name="lacking_information">Please input all your information</string>

    <string name="view_accounts"> View accounts </string>

    <string name="name"> name </string>
    <string name="address"> address </string>
    <string name="age"> age </string>
    <string name="password"> password </string>

    <string name="success"> success !!</string>
    <string name="title_activity_admin_menu">AdminMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="atm">ATM</string>
    <string name="selected_account_default">Selected Account: \n</string>

    <string name="title_activity_withdrawal">Make Withdraw</string>
    <string name="make_withdrawal">Make Withdrawal</string>
    <string name="withdraw_hint">Enter withdrawal amount here</string>
    <string name="select_account_prompt_withdrawal">Choose an account to withdraw from</string>
    <string name="successful_withdraw">Withdraw successful!</string>

    <string name="make_deposit">Make Deposit</string>
    <string name="title_activity_deposit">Make Deposit</string>
    <string name="deposit_hint">Enter deposit amount here</string>
    <string name="select_account_prompt_deposit">Choose an account to deposit to</string>
    <string name="sucessful_deposit">Deposit successful!</string>

    <string name="LoginActivityError">UH OH, there was an error in initializing the database</string>
    <string name="LoginActivityMissingParams">one of your login details has been left empty</string>
    <string name="LoginActivityLoggedInPrompt">Logged in</string>
    <string name="LoginActivityNotSuccessful">not successful</string>
    <string name="LoginActivityUserNotValid">Sorry, but that user ID is not in our system</string>
    <string name="ViewUserInboxSMessages">\'s messages.</string>
    <string name="ViewUserINboxMessagesPlural">message(s)</string>

</resources>
