<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:text="PLEASE ENTER YOUR ADMIN DETAILS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/admin_name"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <EditText
        android:id="@+id/admin_age"
        android:hint="@string/age"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <EditText
        android:id="@+id/admin_address"
        android:hint="@string/address"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <EditText
        android:id="@+id/admin_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>